--- a/.github/workflows/matrics.yml
+++ b/.github/workflows/matrics.yml
@@ -1,103 +1,151 @@
-name: GitHub Metrics
+name: Github Metrics
 
 on:
-  schedule: [{ cron: "0 * * * *" }]  # Updates every hour
   workflow_dispatch:
-  push: { branches: ["main", "master"] }
+  push:
+    branches: [master, main]
+  schedule:
+    - cron: 30 6 * * * # Runs daily at (12:00 AM IST)
 
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
+
     permissions:
       contents: write
 
     steps:
-      - name: Generate GitHub Metrics (Dark + Batman x Catppuccin)
+      - name: Generate metrics
         uses: lowlighter/metrics@latest
         with:
-          token: ${{ secrets.METRICS_TOKEN }}
-
-          user: EchoSingh
-          template: classic
-
-          base: header, activity, community, repositories, metadata
-
-          config_timezone: Asia/Calcutta
-          config_twemoji: true
-          config_gemoji: true
-          config_octicon: true
-          config_animations: true
-          config_base64: true
-          config_padding: "0,10"
-          config_display: large
-
           filename: github-metrics-${{ github.ref_name }}.svg
+          token: ${{ secrets.METRICS_TOKEN }}
           committer_token: ${{ secrets.GITHUB_TOKEN }}
-          committer_message: "🦇 Gotham status report delivered."
+          committer_message: "^_^"
 
-          extras_css: |
-            svg {
-              background-color: #1e1e2e;
-              font-family: "Comic Sans MS", "Comic Sans", cursive, sans-serif;
-            }
+          # Base configuration
+          base: header
+          base_indepth: no
+          base_hireable: no
 
-            .header, .header-title, .header-subtitle {
-              fill: #fab387; /* Catppuccin Mocha Peach */
-              font-weight: bold;
-            }
-
-            .text-primary, .text-secondary, .text-tertiary {
-              fill: #cdd6f4; /* Latte text color */
-            }
-
-            .icon, .icon * {
-              fill: #f9e2af; /* Yellowish Gold accent */
-            }
-
-            .card {
-              fill: #2e2e3e;
-              stroke: #fab387;
-              stroke-width: 1;
-              rx: 6;
-              ry: 6;
-            }
-
-            .card-shadow {
-              filter: drop-shadow(2px 2px 5px rgba(0, 0, 0, 0.5));
-            }
-
-          plugin_achievements: yes
-          plugin_achievements_display: detailed
-          plugin_achievements_threshold: C
-          plugin_achievements_secrets: yes
-
-          plugin_anilist: yes
-          plugin_anilist_user: .user.login
-          plugin_anilist_medias: manga
-          plugin_anilist_sections: favorites,characters
-          plugin_anilist_limit: 2
-          plugin_anilist_limit_characters: 1
-          plugin_anilist_shuffle: yes
-
-          plugin_gists: yes
+          # Plugin: Intro
           plugin_introduction: yes
-          plugin_introduction_title: yes
 
+          # Plugin: Fortune
+          #plugin_fortune: yes
+
+          # Plugin: Lines
+          plugin_lines: yes
+          plugin_lines_sections: base
+          plugin_lines_repositories_limit: 5
+          plugin_lines_history_limit: 2
+
+          # Plugin: PageSpeed
+          #plugin_pagespeed: yes
+          #plugin_pagespeed_screenshot: yes
+          #plugin_pagespeed_token: ${{ secrets.PAGESPEED_TOKEN }}
+          #plugin_pagespeed_url: "your_site_url"
+
+          # Plugin:Notable
+          #plugin_notable: yes
+
+          # Plugin: habits
+          #plugin_habits: yes
+          plugin_habits_facts: yes
+          plugin_habits_charts: no
+          config_timezone: Asia/Kolkata
+
+          # Plugin: WakaTime
+          #plugin_wakatime: yes
+          plugin_wakatime_sections: time, languages, editors, os
+          plugin_wakatime_token: ${{ secrets.WAKATIME_API_KEY }}
+
+          # Plugin: Achievements
+          #plugin_achievements: yes
+          plugin_achievements_only: >-
+            polyglot, stargazer, deployer, member, maintainer, developer,
+            scripter, explorer, infographile
+          plugin_achievements_display: compact
+          plugin_achievements_threshold: X
+
+
+
+          # Plugin: Stargazers
+          #plugin_stargazers: yes
+          #plugin_stargazers_charts: yes
+
+          # Plugin: Isocalender
           plugin_isocalendar: yes
           plugin_isocalendar_duration: half-year
 
+          # Plugin: Stars
+          plugin_stars: yes
+          plugin_stars_limit: 1
+
+          #Plugin topics
+          plugin_topics: yes
+          plugin_topics_limit: 15
+          plugin_topics_mode: icons
+
+
+
+          plugin_support: yes
+          #Plugin Discussion
+          #plugin_discussions: yes
+
+
+          #website quote
+          # plugin_screenshot: yes
+          plugin_screenshot_title: XKCD of the day
+          plugin_screenshot_url: https://xkcd.com
+          plugin_screenshot_selector: "#comic img"
+
+          # Hobbies
+          # Anime
+          plugin_anilist_user: adi2603
+          plugin_anilist: yes
+          plugin_anilist_medias: manga
+          plugin_anilist_sections: favorites,characters
+          plugin_anilist_limit: 1
+          plugin_anilist_limit_characters: 1
+
+          # Peoples
+          # plugin_people: yes
+          plugin_people_types: followers
+
+          #leetcode
+          plugin_leetcode_user: adi_s_r
+          #plugin_leetcode: yes
+
+          #rss
           plugin_rss: yes
           plugin_rss_source: https://news.ycombinator.com/rss
           plugin_rss_limit: 4
 
-          plugin_stargazers: yes
-          plugin_stargazers_charts: yes
-          plugin_stargazers_charts_type: chartist
-          plugin_stargazers_days: 14
-          plugin_stargazers_worldmap: yes
+          #chess
+          #plugin_chess: yes
+          plugin_chess_token: ${{ secrets.CHESS_TOKEN }}
+          plugin_chess_platform: lichess.org
+          plugin_chess_user: Rathore26
 
-          plugin_starlists: yes
-          plugin_starlists_limit: 2
-          plugin_starlists_limit_languages: 8
-          plugin_starlists_limit_repositories: 2
-          plugin_starlists_shuffle_repositories: yes
+          #Display
+          #config_display: large
+          # Configuration order
+          config_order: |
+            base.header,
+            introduction,
+            base.activity+community,
+            base.repositories,
+            habit,
+            achievements,
+            lines,
+            wakatime,
+            discussions,
+            stars,
+            isocalendar,
+            topics,
+            rss,
+            reactions,
+            people,
+            anilist+music,
+            screenshot,
