--- a/.github/workflows/matrics.yml
+++ b/.github/workflows/matrics.yml
@@ -88,7 +88,7 @@ jobs:
           plugin_topics_mode: icons
 
 
-
+          plugin_support_user: EchoSingh 
           plugin_support: yes
           #Plugin Discussion
           #plugin_discussions: yes
