Add workflow_dispatch trigger to chess rating graph

--- a/.github/workflows/chess-rating-graph.yml
+++ b/.github/workflows/chess-rating-graph.yml
@@ -2,6 +2,7 @@ name: Update chess rating graph
 on:
   schedule:
     - cron: '30 18 * * *'
+  workflow_dispatch:
 permissions:
   contents: write
 
