--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -2,34 +2,27 @@ name: Steam Metrics
 
 on:
   schedule:
-    - cron: "30 18 * * *"   # 12:00 AM IST daily
+    - cron: "30 18 * * *"
   workflow_dispatch:
-  push:
-    branches: ["master", "main"]
 
 jobs:
   steam:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
 
     steps:
       - uses: lowlighter/metrics@latest
         with:
-          token: ${{ secrets.METRICS_TOKEN }}
           filename: metrics.steam.svg
-          user: EchoSingh
-          template: classic
-          base: header
 
-          # your timezone
-          config_timezone: Asia/Calcutta
+          # IMPORTANT → disable GitHub parts
+          token: NOT_NEEDED
+          base: ""
 
           # Steam only
           plugin_steam: yes
           plugin_steam_token: ${{ secrets.STEAM_TOKEN }}
           plugin_steam_user: ${{ secrets.STEAM_USER_ID }}
 
-          plugin_steam_sections: player, recently-played
-          plugin_steam_games_limit: 3
-          plugin_steam_recent_games_limit: 2
+          plugin_steam_sections: recently-played
+          plugin_steam_recent_games_limit: 3
+          plugin_steam_achievements_limit: 0
